@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed that scoped joins would not always be respected #6821 [Theory/Danger]
+
 * Ensure that ActiveRecord::Calculations disambiguates field names with the table name.  #11027 [cavalle]
 
 * Added add/remove_timestamps to the schema statements for adding the created_at/updated_at columns on existing tables #11129 [jramirez]
